apps/platform/pypi-server/base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pypi-server
  labels:
    app.kubernetes.io/name: pypi-server
    app.kubernetes.io/component: pypi
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pypi-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pypi-server
        app.kubernetes.io/component: pypi
    spec:
      containers:
        - name: pypi
          image: pypiserver/pypiserver:latest
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          args:
            - run
            - "-i"
            - "0.0.0.0"
            - "-p"
            - "8080"
            - "--disable-fallback"
            - "--overwrite"
            - "-a"
            - "download,list,update"
            - "-P"
            - /etc/pypiserver/htpasswd
            - "--health-endpoint"
            - /healthz
            - /packages
          volumeMounts:
            - name: packages
              mountPath: /packages
            - name: auth
              mountPath: /etc/pypiserver/htpasswd
              subPath: htpasswd
              readOnly: true
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
      volumes:
        - name: packages
          emptyDir: {}
        - name: auth
          secret:
            secretName: pypi-server-auth
