apps/platform/pypi-server/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pypi-server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: pypi-server
